# jez_DMP

./: .cproject  .project  README.md  sdkconfig
components/file_handler/: CMakeLists.txt  file_handler.c
components/file_handler/include/: file_handler.h
components/wifi_web_handler/: CMakeLists.txt  keep_alive.c  wifi_web_handler.c
components/wifi_web_handler/certs/: prvtkey.pem  servercert.pem
components/wifi_web_handler/include/: wifi_web_handler.h
components/ws_handler/: CMakeLists.txt  ws_handler.c
components/ws_handler/include/: ws_handler.h
data/: admin.html  admin.js  config.txt  default_config.txt  index.html  index.js  lights.txt
main/: CMakeLists.txt  main.c
main/data/: admin.html  index.html
