idf_component_register(
	SRCS
		"wifi_web_handler.c"
		"keep_alive.c"
	INCLUDE_DIRS 
		"include"
	REQUIRES
		esp_netif
		nvs_flash
		lwip
		esp_wifi
		esp_event
		mdns
		file_handler
		ws_handler
		esp_http_server
		esp_https_server
		esp_timer
	EMBED_TXTFILES 
		"certs/servercert.pem"
        "certs/prvtkey.pem"
)